# mandybrot

./: .gitignore  Cargo.toml  README.md
examples/: attractor.rs  attractor_movie.rs  basic.rs  burning_ship.rs  celtic_mandelbrot.rs  clifford.rs  clifford_attractor.rs  colour.rs  cosine_mandelbrot.rs  de_jong.rs  exponential_mandelbrot.rs  fractal.rs  grayscale.rs  greyscale.rs  henon.rs  ikeda.rs  julia.rs  lorenz.rs  mandelbrot.rs  multi_attractor.rs  multibrot.rs  newton.rs  perpendicular_mandelbrot.rs  phoenix.rs  shared.rs  sine_mandelbrot.rs  tinkerbell.rs  tricorn.rs
input/: burning_ship.yaml  celtic_mandelbrot.yaml  clifford.yaml  colour_maps.yaml  de_jong.yaml  henon.yaml  ikeda.yaml  julia.yaml  mandelbrot.yaml  multibrot.yaml  newton.yaml  parameters.yaml  phoenix.yaml  tinkerbell.yaml  tricorn.yaml
input/clifford/: eye.yaml  loops.yaml  particles.yaml  pi.yaml  shell.yaml  wormhole.yaml
input/de_jong/: plasma.yaml  skull.yaml
input/mandelbrot/: mandelbrot.yaml  mandelbrot2.yaml
src/: attractor.rs  complex.rs  fractal.rs  lib.rs  mandelbrot.rs  parameters.rs  render.rs  sample.rs
